# endless-context

./: .env.example  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: mcp.json
.agents/skills/local-greeting/: SKILL.md
docker/: entrypoint.sh
docs/: index.md
src/endless_context/: __init__.py  agent.py  channel.py  oceanbase.py  plugin.py  tape_store.py
tests/: test_agent.py  test_app.py  test_channel.py  test_oceanbase.py  test_plugin.py
