[project]
name = "endless-context"
version = "0.1.0"
description = "A Bub extension that exposes a Gradio channel backed by OceanBase seekdb."
authors = [
    { name = "PsiACE", email = "psiace@apache.org" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "bub==0.3.3",
    "bub-tapestore-sqlalchemy",
    "loguru>=0.7.2",
    "pydantic-settings>=2.0.0",
    "pymysql>=1.1.0",
    "pyobvector>=0.2.22",
    "republic==0.5.6",
    "sqlglot>=26.0.0,<30.0.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://modelscope.cn/docs/studios/create"
Repository = "https://github.com/PsiACE/endless-context"

[project.entry-points."bub"]
endless-context = "endless_context.plugin:register"
oceanbase-dialect = "endless_context.oceanbase:register"

[dependency-groups]
dev = [
    "prek>=0.2.17",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "pytest>=7.4.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/endless_context"]
source-includes = ["app.py", "README.md", ".env.example"]

[tool.uv.sources]
bub = { git = "https://github.com/bubbuild/bub.git", tag = "0.3.3" }
bub-tapestore-sqlalchemy = { git = "https://github.com/bubbuild/bub-contrib.git", branch = "main", subdirectory = "packages/bub-tapestore-sqlalchemy" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
